Fixed dark page showing behind the navbar

--- a/_sass/others.scss
+++ b/_sass/others.scss
@@ -98,6 +98,7 @@ a:visited {
     top: 0;
     left: 0;
     right: 0;
+	padding-top: 105px
 }
 
 .content {
